--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,16 @@
-title: Your awesome title
-author: GitHub User
+title: Luis M. Chávez
+author: Luischdu
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  
+  Coming soon...
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: luischavezduque # DO NOT include the @ character, or else the build will fail!
+github_username:  luischdu # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
